# obtain_data_ws

./: .~lock.data.csv#  JointTorque.xml  JointTorqueEoEForce.xml  current.txt  data (copy).csv  data.csv  data2.csv  data3.csv  data_withomg.csv  torque.txt
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/msg/: EoeState.msg
src/obtain_data/: CMakeLists.txt  package.xml
src/obtain_data/include/obtain_data/: crane_x7_comm.hpp  dynamics.hpp  globals.hpp
src/obtain_data/src/: crane_x7_comm.cpp  dynamics.cpp  dynamics.cpp.bak  dynamics_test.cpp  obtain copy.cpp  obtain.cpp  obtain.cpp.bak  obtain3.cpp  publish.cpp
src/obtain_data/src/old/: obtain copy 2.cpp  obtain.cpp  publish copy.cpp  publish.cpp.bak
